Fixed spacing between sections

--- a/dev/css/partials/_classes.scss
+++ b/dev/css/partials/_classes.scss
@@ -37,6 +37,8 @@
 .program{
 	height: calc(100vh - 57px);
 	margin-top: 57px;
+	margin-right: 20px;
+	margin-left: 20px;
 }
 
 .gameInteraction{
@@ -374,4 +376,11 @@ p.desc {
 }
 .noPadding {
 	padding: 0;
+}
+.displayWindow {
+	img {
+		margin-right: auto;
+		margin-left: auto;
+		display: block;
+	}
 }
